<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OSIA</string>
    <string name="title_activity_add_product">AddProduct</string>
    <string name="hello_world">Hello world!</string>
    <string name="product_name">Name</string>
    <string name="product_category">Category</string>
    <string name="product_price">Unit price</string>
    <string name="product_cost">Costing</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_save">Save</string>
    <string name="title_activity_database_handler">DatabaseHandler</string>
    <string name="title_activity_view_inventory">ViewInventory</string>
    <string name="title_activity_see_report">SeeReport</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add item</string>
    <string name="title_activity_sales_order">SalesOrder</string>
    <string name="total_ammount">Subtotal</string>
    <string name="customer_name">Customer:</string>
    <string name="ask_for_name">Name</string>
    <string name="net_payable">Net Payable:  </string>
    <string name="title_activity_sales_order_add_item">SalesOrderAddItem</string>
    <string name="clear">Clear</string>
    <string name="title_activity_purchase_order">PurchaseOrder</string>
    <string name="purchaseOrderNo">001</string>
    <string name="purchaseOrder">Order No: </string>
    <string name="title_activity_purchase_order_dealer">PurchaseOrderDealer</string>
    <string name="title_activity_add_dealer">AddDealer</string>
    <string name="title_activity_user_login">UserLogin</string>
    <string name="title_activity_user_sign_up">UserSignUp</string>
    <string name="dashboard">OSIA|Dashboard</string>
    <string name="title_activity_customer_dash_board">CustomerDashBoardActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_purchase_order_add_item">PurchaseOrderAddItem</string>
    <string name="title_activity_customer_see_report">CustomerSeeReport</string>
    <string name="title_activity_see_sales_report">SeeSalesReport</string>
    <string name="title_activity_see_purchase_report">SeePurchaseReport</string>

</resources>
