<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SalesOrder" >

    <ListView
        android:id="@+id/lvSalesAddedItem"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/tvSalesNetPayable"
        android:layout_alignLeft="@+id/tvSalesCustomer"
        android:layout_below="@+id/tvSalesCustomer"
        android:layout_marginTop="16dp" >

    </ListView>

    <TextView
        android:id="@+id/tvSalesOrderNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSalesOrder"
        android:layout_alignBottom="@+id/tvSalesOrder"
        android:layout_toRightOf="@+id/tvSalesOrder"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvSetSalesDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/etSalesCustomerName"
        android:text="SetDate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvSalesCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etSalesCustomerName"
        android:layout_alignParentLeft="true"
        android:text="@string/customer_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSalesNetPayable"
        android:layout_alignParentBottom="true"
        android:text="Checkout" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSalesNetPayable"
        android:layout_alignBottom="@+id/tvSalesNetPayable"
        android:layout_alignRight="@+id/lvSalesAddedItem"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etSalesCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvSetSalesDate"
        android:layout_toRightOf="@+id/tvSalesCustomer"
        android:ems="10"
        android:hint="@string/ask_for_name" />

    <TextView
        android:id="@+id/tvSalesOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSetSalesDate"
        android:layout_alignBottom="@+id/tvSetSalesDate"
        android:layout_alignLeft="@+id/tvSalesCustomer"
        android:text="Order no: 	"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvSalesNetPayable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignRight="@+id/tvSalesOrderNo"
        android:text="@string/net_payable"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>