<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#eeeeee"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/tvProductNamePOAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/product_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etNormalPricePOAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvNormalPricePOAI"
        android:layout_alignParentRight="true"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@drawable/textbox_round_corner"
        android:layout_alignTop="@+id/tvNormalPricePOAI"
        android:layout_toRightOf="@+id/tvNormalPricePOAI"
        android:ems="10" />

    <TextView
        android:id="@+id/etSubtotalPOAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvQuantityPOAI"
        android:layout_alignLeft="@+id/etQuantityPOAI"
        android:layout_alignParentRight="true"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@drawable/textbox_round_corner"
        android:layout_alignTop="@+id/tvQuantityPOAI"
        android:ems="10" />

    <EditText
        android:id="@+id/etQuantityPOAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvCostingPricePOAI"
        android:layout_alignLeft="@+id/etNormalPricePOAI"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvCostingPricePOAI"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@drawable/textbox_round_corner"
        android:ems="10" />

    <AutoCompleteTextView
        android:id="@+id/etCategoryPOAI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvProductCategoryPOAI"
        android:layout_alignLeft="@+id/etNormalPricePOAI"
        android:layout_alignParentRight="true"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@drawable/textbox_round_corner"
        android:layout_alignTop="@+id/tvProductCategoryPOAI" />

    <TextView
        android:id="@+id/tvProductCategoryPOAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvNormalPricePOAI"
        android:layout_below="@+id/tvProductNamePOAI"
        android:layout_marginTop="15dp"
        android:text="@string/product_category"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etProductNamePOAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvProductNamePOAI"
        android:layout_alignLeft="@+id/etCategoryPOAI"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvProductNamePOAI"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@drawable/textbox_round_corner"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvNormalPricePOAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvCostingPricePOAI"
        android:layout_below="@+id/etCategoryPOAI"
        android:layout_marginTop="14dp"
        android:text="@string/product_price"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvCostingPricePOAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvQuantityPOAI"
        android:layout_below="@+id/tvNormalPricePOAI"
        android:layout_marginTop="14dp"
        android:text="@string/product_quantity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvQuantityPOAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvProductNamePOAI"
        android:layout_below="@+id/tvCostingPricePOAI"
        android:layout_marginTop="15dp"
        android:text="Subtotal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnSubmitPOAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvQuantityPOAI"
        android:layout_alignRight="@+id/etSubtotalPOAI"
        android:layout_below="@+id/etSubtotalPOAI"
        android:layout_marginTop="26dp"
        android:onClick="validationChecker"
        android:background="@drawable/btn_primary"
        android:textColor="#ffffff"
        android:text="Add Product" />

</RelativeLayout>