<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#EEEEEE"
    tools:context=".SalesOrderAddItem" >

    <Spinner
        android:id="@+id/spAddItemCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:layout_toRightOf="@+id/tvAddItemUnitPrice" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteAddItemProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvAddItemProcductName"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvAddItemProcductName"
        android:layout_toRightOf="@+id/tvAddItemUnitPrice"
        android:background="@drawable/textbox_round_corner"
        android:paddingLeft="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <EditText
        android:id="@+id/etAddItemProductQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvAddItemProductQuantity"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvAddItemProductQuantity"
        android:layout_toRightOf="@+id/tvAddItemUnitPrice"
        android:background="@drawable/textbox_round_corner"
        android:ems="10"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:text="1" >

    </EditText>

    <TextView
        android:id="@+id/tvSalesAddItemUnitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvAddItemUnitPrice"
        android:layout_alignLeft="@+id/etAddItemProductQuantity"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvAddItemUnitPrice"
        android:background="@drawable/textbox_round_corner"
        android:paddingLeft="10dp"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvSalesAddItemSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvAddItemTotalPrice"
        android:layout_alignLeft="@+id/tvSalesAddItemUnitPrice"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvAddItemTotalPrice"
        android:background="@drawable/textbox_round_corner"
        android:paddingLeft="10dp"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnAddItem"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAddItemTotalPrice"
        android:layout_alignRight="@+id/tvSalesAddItemSubtotal"
        android:layout_below="@+id/tvAddItemTotalPrice"
        android:layout_marginTop="19dp"
        android:background="@drawable/btn_primary"
        android:onClick="addItem"
        android:textColor="#ffffff"
        android:text="@string/add_item" />

    <TextView
        android:id="@+id/tvAddItemUnitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAddItemProductQuantity"
        android:layout_below="@+id/tvAddItemProductQuantity"
        android:layout_marginTop="14dp"
        android:text="Unit Price:	"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvAddItemTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAddItemUnitPrice"
        android:layout_below="@+id/tvAddItemUnitPrice"
        android:layout_marginTop="14dp"
        android:text="Subtotal:		"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvAddItemProductQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAddItemProcductName"
        android:layout_below="@+id/tvAddItemProcductName"
        android:layout_marginTop="14dp"
        android:text="@string/product_quantity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvAddItemProcductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAddItemCategory"
        android:layout_below="@+id/spAddItemCategory"
        android:layout_marginTop="14dp"
        android:text="@string/product_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/tvAddItemCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/spAddItemCategory"
        android:text="@string/product_category"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
